--- a/client/src/components/Header/Header.css
+++ b/client/src/components/Header/Header.css
@@ -1,21 +1,21 @@
 .navlink {
-    position: relative;
-    font-family: "Oswald", sans-serif;
-    font-size: 1.75rem;
+  position: relative;
+  font-family: "Oswald", sans-serif;
+  font-size: 3rem;
 }
 
 .navlink::after {
-    content: "";
-    position: absolute;
-    height: 5px;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    width: 0;
-    background: #F0A500;
-    transition: width .4s;
+  content: "";
+  position: absolute;
+  height: 5px;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  width: 0;
+  background: #f0a500;
+  transition: width 0.4s;
 }
 
 .navlink:hover::after {
-    width: 100%;
+  width: 100%;
 }
