--- a/client/src/components/Header/Header.css
+++ b/client/src/components/Header/Header.css
@@ -1,7 +1,7 @@
 .navlink {
   position: relative;
   font-family: "Oswald", sans-serif;
-  font-size: 3rem;
+  font-size: 1.7rem;
 }
 
 .navlink::after {
@@ -11,7 +11,7 @@
   left: 0;
   right: 0;
   bottom: 0;
-  width: 0;
+  width: 0%;
   background: #f0a500;
   transition: width 0.4s;
 }
